Actions given to Login and signup button of Home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Login_hint_user_name">Enter your username / mailid</string>
     <string name="Login_hint_password">Enter Password</string>
     <string name="Signup_hint_mail">Enter your Email Id</string>
+    <string name="Signup_hint_contact">Enter your Contact Number</string>
 </resources>
